vendored_parsers/tree-sitter-powershell/grammar.js
    program: $ => seq(
      optional($.param_block),
      $.statement_list
    ),

    // Comments
    string_literal: $ => choice(
      $.expandable_string_literal,
      $.verbatim_string_characters,
      $.expandable_here_string_literal,
      $.verbatim_here_string_characters
    ),

    expandable_string_literal: $ => seq(
      /\"(\s*\#*)*/,  // this is a trick to avoid tree-sitter allowing comment between tokens, as string should be tokenize but powershell allow subexpression inside it...
      repeat(
        choice(
          token.immediate(/[^\$\"`]+/),
          $.variable,
          $.sub_expression,
          token.immediate(/\$(`.{1}|`\n|[\s\\])/),
          token.immediate(/`.{1}|`\n/),
          token.immediate("\"\""),
          token.immediate("$"),
        )
      ),
      repeat(token.immediate("$")),
      token.immediate(/(\s*\#*)*\"/)
    ),

    expandable_here_string_literal: $ => seq(
      /@\" *\n/,
      repeat(
        choice(
          token.immediate(/[^\$\n`]+/),
          $.variable,
          $.sub_expression,
          token.immediate(/\n+[^\"\n]/),
          token.immediate(/\n+\"[^@]/),
          token.immediate("$"),
          token.immediate(/`.{1}|`\n/)
        )
      ),
      token.immediate(/\n+\"@/)
    ),

    verbatim_string_characters: $ => token(seq(
      "'",
      repeat(
        choice(
          /[^']+/,
          "''"
        )
      ),
      "'"
    )),

    verbatim_here_string_characters: $ => token(
      seq(
        /@\'\s*\n/,
        repeat(
          choice(
            /[^\n]/,
            /\n+[^\'\n]/,
            /\n\'[^@]/,
          )
        ),
        /\n+\'@/
      )
    ),

    // Simple names
    simple_name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Type names
    type_identifier: $ => /[a-zA-Z0-9_]+/,
    
    type_name: $ => choice(
      $.type_identifier,
      seq($.type_name, ".", $.type_identifier )
    ),

    array_type_name: $ => seq($.type_name, "["),
    generic_type_name: $ => seq($.type_name, "["),

    // Operators and punctuators

    assignement_operator: $ => choice(
      "=", "!=", "+=", "*=", "/=", "%="
    ),

    format_operator: $ => reservedWord("-f"),

    // Variables

    variable: $ => choice(
      '$$',
      '$^',
      '$?',
      '$_',
      token(seq('$', optional(seq(choice(reservedWord("global:"), reservedWord("local:"), reservedWord("private:"), reservedWord("script:"), reservedWord("using:"), reservedWord("workflow:"), /[a-zA-Z0-9_]+/), ":")), /[a-zA-Z0-9_]+|\?/)),
      token(seq('@', optional(seq(choice(reservedWord("global:"), reservedWord("local:"), reservedWord("private:"), reservedWord("script:"), reservedWord("using:"), reservedWord("workflow:"), /[a-zA-Z0-9_]+/), ":")), /[a-zA-Z0-9_]+|\?/)),
      $.braced_variable
    ),

    braced_variable: $=> /\$\{[^}]+\}/,

    // Commands
    generic_token: $ => token(
      /[^\(\)\$\"\'\-\{\}@\|\[`\s][^\s\(\)\}\|;,]*/,
    ),

    statement_list: $ => repeat1($._statement),

    _statement: $ => prec.right(choice(
      $.if_statement,
      seq(optional($.label), $._labeled_statement),
      $.function_statement,
      $.class_statement,
      $.enum_statement,
      seq($.flow_control_statement, $._statement_terminator),
      $.trap_statement,
      $.try_statement,
      $.data_statement,
      $.inlinescript_statement,
      $.parallel_statement,
      $.sequence_statement,
      seq($.pipeline, $._statement_terminator),
      $.empty_statement
    )),

    pipeline: $ => choice(
      $.assignment_expression,
      seq($._expression, optional($.redirections), optional($._pipeline_tail)),
      seq($.command, optional($.verbatim_command_argument), optional($._pipeline_tail))
    ),

    // Distinct a normal expression to a left assignement expession
    left_assignment_expression: $ => $._expression,

    assignment_expression: $ => seq(
      $.left_assignment_expression, $.assignement_operator, field("value", $._statement)
    ),

    _pipeline_tail: $ => repeat1(
      seq('|', $.command)
    ),

    command: $ => choice(
      seq(field("command_name", $.command_name), field("command_elements", optional($.command_elements))),
      $.foreach_command,
      seq($.command_invokation_operator, /*optional($.command_module),*/ field("command_name", $.command_name_expr), field("command_elements", optional($.command_elements)))
    ),

    command_invokation_operator: $ => choice(
      ".",
      "&"
    ),

    // This rule is ignored as it does not appear as a rule
    //command_module: $ => $.primary_expression,

    _expandable_string_literal_immediate: $ => seq(
      repeat(
        choice(
          /[^\$"`]+/,
          $.variable,
          /\$`(.{1}|`\n)/,
          /`.{1}|`\n/,
          "\"\"",
          $.sub_expression
        )
      ),
      repeat("$"),
      "\""
    ),

    command_name: $ => prec.right(seq(
      /[^\{\}\(\);,\|\&`"'\s\n\[\]\+\-\*\/\$@<\!%]+/,
      repeat(
        choice(
          token.immediate(/[^\{\}\(\);,\|\&"'\s\n]+/),
          seq(token.immediate("\""), $._expandable_string_literal_immediate),
          token.immediate("\"\""),
          token.immediate("''")
        )
      )
    )),

    command_name_expr: $ => choice(
      $.command_name,
      $.path_command_name,
      $._primary_expression
    ),

    command_elements: $ => prec.right(repeat1($._command_element)),

    _command_element: $ => choice(
      $.command_parameter,
      seq($._command_argument, optional($.argument_list)),
      $.redirection,
      $.stop_parsing
    ),

    // Stop parsing is a token that end the parsing of command line
    command_argument_sep: $ => prec.right(choice(repeat1(" "), ":")),

    // Adapt the grammar to have same behavior
    _expression: $ => $.logical_expression,

    logical_expression: $ => prec.left(choice(
      $.bitwise_expression,
      seq (
        $.logical_expression,
        choice(reservedWord("-and"), reservedWord("-or"), reservedWord("-xor")), $.bitwise_expression
      )
    )),

    bitwise_expression: $ => prec.left(choice(
      $.comparison_expression,
      seq (
        $.bitwise_expression,
        choice(reservedWord("-band"), reservedWord("-bor"), reservedWord("-bxor")), $.comparison_expression
      )
    )),

    comparison_expression: $ => prec.left(choice(
      $.additive_expression,
      seq (
        $.comparison_expression,
        $.comparison_operator, $.additive_expression
      )
    )),

    additive_expression: $ => prec.left(choice(
      $.multiplicative_expression,
      seq (
        $.additive_expression,
        choice("+", "-"), $.multiplicative_expression
      )
    )),

    multiplicative_expression: $ => prec.left(choice(
      $.format_expression,
      seq (
        $.multiplicative_expression,
        choice("/", "\\", "%", "*"), $.format_expression
      )
    )),

    format_expression: $ => prec.left(choice(
      $.range_expression,
      seq (
        $.format_expression,
        $.format_operator, $.range_expression
      )
    )),

    range_expression: $ => prec.left(choice(
      $.array_literal_expression,
      seq (
        $.range_expression,
        "..", $.array_literal_expression
      )
    )),

    array_literal_expression: $ => prec.left(seq(
      $.unary_expression,
      repeat ( 
        seq(
          ",",
          $.unary_expression
        )
      )
    )),

    unary_expression: $ => prec.right(choice(
      $._primary_expression,
      $.expression_with_unary_operator
    )),

    expression_with_unary_operator: $ => choice(
      seq(",", $.unary_expression),
      seq(reservedWord("-not"), $.unary_expression),
      seq("!", $.unary_expression),
      seq(reservedWord("-bnot"), $.unary_expression),
      seq("+", $.unary_expression),
      seq("-", $.unary_expression),
      $.pre_increment_expression,
      $.pre_decrement_expression,
      $.cast_expression,
      seq(reservedWord("-split"), $.unary_expression),
      seq(reservedWord("-join"), $.unary_expression)
    ),

    cast_expression: $ => prec(PREC.CAST, seq($.type_literal, $.unary_expression)),

    _primary_expression: $ => choice(
      $._value,
      $.member_access,
      $.element_access,
      $.invokation_expression,
      $.post_increment_expression,
      $.post_decrement_expression
    ),

    _value: $ => choice(
      $.parenthesized_expression,
      $.sub_expression,
      $.array_expression,
      $.script_block_expression,
      $.hash_literal_expression,
      $._literal,
      $.type_literal,
      $.variable
    ),

    parenthesized_expression: $ => seq("(", $.pipeline, ")"),

    sub_expression: $ => seq("$(", field("statements", optional($.statement_list)), ")"),

    member_access: $ => prec.left(choice(
      seq($._primary_expression, token.immediate("."), $.member_name),
      seq($._primary_expression, "::", $.member_name),
    )),

    member_name: $ => choice(
      $.simple_name,
      $.string_literal,
      $.expression_with_unary_operator,
      $._value
    ),

    invokation_expression: $ => choice(
      seq($._primary_expression, token.immediate("."), $.member_name, $.argument_list),
      seq($._primary_expression, "::", $.member_name, $.argument_list),
      $.invokation_foreach_expression
    ),

    // adding this rule to handle .foreach synthax
    argument_list: $ => seq("(", field("argument_expression_list", optional($.argument_expression_list)), ")"),

    argument_expression_list: $ => prec.left(seq(
      $.argument_expression,
      repeat(
        seq(",", $.argument_expression)
      )
    )),

    argument_expression: $ => $.logical_argument_expression,

    logical_argument_expression: $ => prec.left(choice(
      $.bitwise_argument_expression,
      seq (
        $.logical_argument_expression,
        choice(reservedWord("-and"), reservedWord("-or"), reservedWord("-xor")), $.bitwise_argument_expression
      )
    )),
    
    bitwise_argument_expression: $ => prec.left(choice(
      $.comparison_argument_expression,
      seq (
        $.bitwise_argument_expression,
        choice(reservedWord("-and"), reservedWord("-or"), reservedWord("-xor")), $.comparison_argument_expression
      )
    )),

    comparison_argument_expression: $ => prec.left(choice(
      $.additive_argument_expression,
      seq (
        $.comparison_argument_expression,
        $.comparison_operator, $.additive_argument_expression
      )
    )),

    additive_argument_expression: $ => prec.left(choice(
      $.multiplicative_argument_expression,
      seq (
        $.additive_argument_expression,
        choice("+", "-"), $.multiplicative_argument_expression
      )
    )),

    multiplicative_argument_expression: $ => prec.left(choice(
      $.format_argument_expression,
      seq (
        $.multiplicative_argument_expression,
        choice("/", "\\", "%", "*"), $.format_argument_expression
      )
    )),

    format_argument_expression: $ => prec.left(choice(
      $.range_argument_expression,
      seq (
        $.format_argument_expression,
        $.format_operator, $.range_argument_expression
      )
    )),

    range_argument_expression: $ => prec.left(choice(
      $.unary_expression,
      seq (
        $.range_argument_expression,
        "..", $.unary_expression
      )
    )),

    type_literal: $ => seq("[", $.type_spec, "]"),

    type_spec: $ => choice(
      seq($.array_type_name, optional($.dimension), "]"),
      seq($.generic_type_name, $.generic_type_arguments, "]"),
      $.type_name
    ),

    generic_type_arguments: $ => seq(
      $.type_spec,
      repeat(seq(",", $.type_spec))
    ),

    // Attributes
