vendored_parsers/tree-sitter-powershell/test/corpus/obfuscated.txt
===
Obfuscated command with eval and format
===

${vjOj`Q`gX} = $(&("{0}{1}{2}"-f'w','h','oami'))

---

(program
  (statement_list
    (pipeline
      (assignment_expression
        (left_assignment_expression
          (logical_expression
            (bitwise_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (format_expression
                      (range_expression
                        (array_literal_expression
                          (unary_expression
                            (variable
                              (braced_variable))))))))))))
        (assignement_operator)
        value: (pipeline
          (logical_expression
            (bitwise_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (format_expression
                      (range_expression
                        (array_literal_expression
                          (unary_expression
                            (sub_expression
                              statements: (statement_list
                                (pipeline
                                  (command
                                    (command_invokation_operator)
                                    command_name: (command_name_expr
                                      (parenthesized_expression
                                        (pipeline
                                          (logical_expression
                                            (bitwise_expression
                                              (comparison_expression
                                                (additive_expression
                                                  (multiplicative_expression
                                                    (format_expression
                                                      (format_expression
                                                        (range_expression
                                                          (array_literal_expression
                                                            (unary_expression
                                                              (string_literal
                                                                (expandable_string_literal))))))
                                                      (format_operator)
                                                      (range_expression
                                                        (array_literal_expression
                                                          (unary_expression
                                                            (string_literal
                                                              (verbatim_string_characters)))
                                                          (unary_expression
                                                            (string_literal
                                                              (verbatim_string_characters)))
                                                          (unary_expression
                                                            (string_literal
                                                              (verbatim_string_characters))))))))))))))))))))))))))))))))

===
Obfuscated decoded using base64 native method
===

Invoke-Expression ([System.Text.Encoding]::Unicode.GetString(([convert]::FromBase64String('VwByAGkAdABlAC0ATwB1AHQAcAB1AHQAIAAiAFQAcgB5ACAASABhAHIAZABlAHIAIgA='))))

---

(program
  (statement_list
    (pipeline
      (command
        (command_name)
        (command_elements
          (command_argument_sep)
          (array_literal_expression
            (unary_expression
              (parenthesized_expression
                (pipeline
                  (logical_expression
                    (bitwise_expression
                      (comparison_expression
                        (additive_expression
                          (multiplicative_expression
                            (format_expression
                              (range_expression
                                (array_literal_expression
                                  (unary_expression
                                    (invokation_expression
                                      (member_access
                                        (type_literal
                                          (type_spec
                                            (type_name
                                              (type_name
                                                (type_name
                                                  (type_identifier))
                                                (type_identifier))
                                              (type_identifier))))
                                        (member_name
                                          (simple_name)))
                                      (member_name
                                        (simple_name))
                                      (argument_list
                                        (argument_expression_list
                                          (argument_expression
                                            (logical_argument_expression
                                              (bitwise_argument_expression
                                                (comparison_argument_expression
                                                  (additive_argument_expression
                                                    (multiplicative_argument_expression
                                                      (format_argument_expression
                                                        (range_argument_expression
                                                          (unary_expression
                                                            (parenthesized_expression
                                                              (pipeline
                                                                (logical_expression
                                                                  (bitwise_expression
                                                                    (comparison_expression
                                                                      (additive_expression
                                                                        (multiplicative_expression
                                                                          (format_expression
                                                                            (range_expression
                                                                              (array_literal_expression
                                                                                (unary_expression
                                                                                  (invokation_expression
                                                                                    (type_literal
                                                                                      (type_spec
                                                                                        (type_name
                                                                                          (type_identifier))))
                                                                                    (member_name
                                                                                      (simple_name))
                                                                                    (argument_list
                                                                                      (argument_expression_list
                                                                                        (argument_expression
                                                                                          (logical_argument_expression
                                                                                            (bitwise_argument_expression
                                                                                              (comparison_argument_expression
                                                                                                (additive_argument_expression
                                                                                                  (multiplicative_argument_expression
                                                                                                    (format_argument_expression
                                                                                                      (range_argument_expression
                                                                                                        (unary_expression
                                                                                                          (string_literal
                                                                                                            (verbatim_string_characters)))))))))))))))))))))))))))))))))))))))))))))))))))))))


===
Obfuscated command
===

&(Get-Command i????e-rest*)

---

(program
  (statement_list
    (pipeline
      (command
        (command_invokation_operator)
        (command_name_expr
          (parenthesized_expression
            (pipeline
              (command
                (command_name)
                (command_elements
                  (command_argument_sep)
                  (generic_token))))))))))
